# Zhijia-Guardian

./: .env.example  .gitignore  README.md  backend.sh  carla.sh  environment.yml  frontend.sh  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: default.yaml  demo.yaml  llm.yaml  llm_deepseek.yaml  paths.yaml  thresholds.yaml  vlm_qwen.yaml
demo/: README.md  carla_3d_case_manifest.json
docs/: active_causal_workflow.md  adapter_contract.md  agent_logic_architecture.md  agent_redefinition_v2.md  agentic_workflow.md  audit_2026-07-14.md  carla_benchmark_v0_2.md  carla_closed_loop_v0_1.md  carla_extreme_weather_v0_1.md  carla_runtime.md  data_sources.md  design.md  diagnosis_report_contract.md  evaluation_protocol.md  experiment_analysis_report.md  experiment_results_v0_1.md  experiment_results_v0_2.md  failure_sample_contract.md  legacy_recalibration.md  limitations.md  manual_benchmark_v0_3.md  multi_agent_graph.md  nuplan_perturbation.md  nuscenes_real_multicam_v0_2.md  nuscenes_real_yolo_v0_1.md  orchestration_decision.md  output_contract.md  quickstart.md  qwen_visual_review.md  research_reframing_sut_real2sim_agents.md  review_and_algorithm_plan.md  schema_mapping_carla.md  schema_mapping_nuplan.md  schema_mapping_nuscenes.md  schema_mapping_safebench.md  single_llm_baseline.md  workbench.md  完整实验分析报告.md
docx/: design.md  todolist.md
experiments/: compare_runs.py  export_experiment_tables.py  metrics.py  run_diagnosis.py  run_eval.py  run_visual_review.py
patches/: scenario_runner_0.9.15_py310.patch
scripts/: benchmark_diagnosis_latency.py  capture_carla_3d_case_videos.py  evaluate_synthetic_matrix.py  export_output_schemas.py  export_safebench_records.py  fetch_minimal_sample.py  generate_canonical_demo.py  generate_carla_fault_benchmark.py  generate_manual_scenarios.py  generate_nuplan_perturbation.py  generate_perturbed_case.py  (+12 more)
(+130 files in other folders)
