[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhijia-guardian"
version = "0.1.0"
description = "Explainable autonomous driving diagnosis prototype."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
app = [
  "pandas>=2",
  "streamlit>=1.36",
]
llm = [
  "openai>=1.68,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
