[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "zhijia-guardian"
version = "0.2.0"
description = "Evidence-bounded offline diagnostics for openpilot-like message and control chains."
requires-python = ">=3.12,<3.13"
dependencies = ["pydantic>=2.8,<3", "PyYAML>=6", "zstandard>=0.23"]

[project.optional-dependencies]
openpilot = ["pycapnp==2.1.0", "numpy>=2", "pyzmq>=26", "requests>=2.32", "tqdm>=4.66"]
llm = ["openai>=1.68,<3"]
dev = ["pytest>=8"]

[project.scripts]
zhijia-guardian = "zhijia_guardian.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
